# PA2577

./: .gitmodules  README.md
big_data_analytics/: all-at-once.yaml  makefile
big_data_analytics/Containers/: Makefile
big_data_analytics/Containers/CodeStreamConsumer/src/: CloneDetector.js  Statistic.js  StatisticsStorage.js  index.js
big_data_analytics/Containers/CodeStreamGenerator/: generate-code-stream.sh
big_data_analytics/Containers/MonitorTool/: .clang-format  .clangd  CMakeLists.txt  Dockerfile
big_data_analytics/Containers/MonitorTool/inc/: database.h  frontend.h  log_manager.h  statistics.h  statistics_manager.h
big_data_analytics/Containers/MonitorTool/scripts/: dependencies.sh  ftxui.sh  mongo.sh  monitor-tool.sh
big_data_analytics/Containers/MonitorTool/src/: database.cpp  frontend.cpp  log_manager.cpp  main.cpp  statistics.cpp  statistics_manager.cpp
big_data_analytics/Containers/cljdetector/src/cljdetector/: core.clj
big_data_analytics/Containers/cljdetector/src/cljdetector/storage/: storage.clj
